Solved issue but a redundant scrollbar appeared at the last step of the service creation menu.

--- a/spring-boot/admin/src/main/resources/static/dashboard/css/custom.css
+++ b/spring-boot/admin/src/main/resources/static/dashboard/css/custom.css
@@ -3083,8 +3083,7 @@ ul.social li {
   margin: 0;
   padding: 5px;
   font: normal 12px Verdana, Arial, Helvetica, sans-serif;
-  color: #5A5655;
-  height: 300px !important;
+  color: #73879C;
   text-align: left;
   overflow: auto;
   z-index: 88;
